got 2nd background color working, fixed div containers to wrap correct content, fixed styling on several containers.

--- a/style.css
+++ b/style.css
@@ -14,13 +14,23 @@ body {
 }
 
 .grid-container {
+
     display: grid;
     justify-content: center;
-    padding-left: 5px;
-    padding-right: 5px;
+    padding-left: 30px;
+    padding-right: 30px;
 }
 
-/*styling for Latest News subtitle*/
+.grid-item1 {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-top: 30px;
+    width: 50%;
+    padding-left: 25%;
+}
 
 h2 {
 
@@ -47,9 +57,9 @@ ul {
     display: flex;
     flex-direction: row;
     list-style-type: none;
-    justify-content: space-between;
-    padding-left: 20px;
-    padding-right: 20px;
+    justify-content: space-evenly;
+    padding-left: 50px;
+    padding-right: 50px;
     
 
 }
@@ -73,22 +83,7 @@ li a:hover {
     color: white;
   }
 
-.grid-item1 {
 
-    display: grid;
-    margin: .5em;
-}
-
-/*GDES News Logo*/
-
-.image1 {
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50%;
-  
- }
 
 /*proportions for all images*/
 
@@ -131,7 +126,7 @@ img {
 .grid-item6 {
 
     padding-top: 30px;
-    padding-bottom: 50px;
+    padding-bottom: 100px;
 }
 
 .classroom {
@@ -140,9 +135,12 @@ img {
     padding-bottom: 40px;
 }
 
-.grid-tiem7 {
-   
+.grid-item7 {
 
+    background-color: #F4E2D6 ;
+    padding-top: 100px;
+    padding-left: 30px;
+    padding-right: 30px;
 }
 
 .grid-item7-a {
@@ -162,9 +160,9 @@ img {
 
 .button-container {
 
-        display: flex;
-        padding-bottom: 50px;
-        justify-content: center;
+    display: flex;
+    padding-bottom: 50px;
+    justify-content: center;
 
 }
 
